[tool.poetry]
name = "py-tower-defense"
version = "1.5.0"
description = "Implementation of a Tower Defense game in Python"
authors = ["vgardies <vincent.gardies@ens-lyon.fr>"]
readme = "README.md"
packages = [{include = "py-tower-defense"}]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.5.0"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

